fixied heading on mobile devices

--- a/app/styles/section-1.sass
+++ b/app/styles/section-1.sass
@@ -8,7 +8,7 @@
   background-image: url(../images/jpg/section_1_320.jpg)
   padding-top: 100px
   text-align: center
-  margin-bottom: 120px
+  margin-bottom: 170px
   &__box
     padding: 0 20px 
   &__title 
@@ -19,7 +19,6 @@
     letter-spacing: 0.48px
     margin-bottom: 62px
   &__button
-    position: static
     margin-bottom: 60px
   &__figure
     width: 250px
