--- a/app/styles/section-3.sass
+++ b/app/styles/section-3.sass
@@ -8,10 +8,7 @@
     &:not(:last-child)
       margin-bottom: 20px
   &__title
-    font-weight: 700
-    font-size: 24px
     color: #fff
-    margin: 0
     margin-bottom: 23px
   &__name
     font-weight: 700
@@ -30,8 +27,6 @@
     color: #FA4842
     text-align: center
     border-radius: 50%
-    display: inline-block
-    vertical-align: middle
     line-height: 24px
     margin-right: 7px
   &__figure
