--- a/app/styles/section-4.sass
+++ b/app/styles/section-4.sass
@@ -2,8 +2,6 @@
   background-color: #fff
   text-align: center
   padding-top: 46px
-  &__heading
-    position: static 
   &__item
     margin-top: 48px
     padding: 37px 37px 39px
